[gd_scene load_steps=10 format=3 uid="uid://csn0wopgc67fi"]

[ext_resource type="Script" path="res://mob/mob.gd" id="1_3glid"]
[ext_resource type="Texture2D" uid="uid://2s4y78y2ivm4" path="res://icon.svg" id="2_3psyd"]
[ext_resource type="Texture2D" uid="uid://ci8hkxskjtuv7" path="res://mob/icon_max.svg" id="3_8262e"]
[ext_resource type="Texture2D" uid="uid://dpj55bshupp8b" path="res://mob/cono2.png" id="4_cwfkj"]
[ext_resource type="Texture2D" uid="uid://eeiw34qmnp48" path="res://mob/tire1.png" id="5_rrs6r"]
[ext_resource type="Texture2D" uid="uid://blmnnxvxjy8uc" path="res://mob/cono1.png" id="6_buee5"]
[ext_resource type="Texture2D" uid="uid://cx7q1rsukrjne" path="res://mob/tire2.png" id="7_3ou44"]
[ext_resource type="Texture2D" uid="uid://b830m3qp6mqam" path="res://mob/rock.png" id="8_m32nm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_27tpj"]
size = Vector2(21, 20)

[node name="MOB" type="Area2D"]
script = ExtResource("1_3glid")

[node name="BlueCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-10.5, -10)
shape = SubResource("RectangleShape2D_27tpj")
disabled = true

[node name="BlueSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(-10.5, -10)
scale = Vector2(0.164063, 0.15625)
texture = ExtResource("2_3psyd")

[node name="RedCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-62.5, -63.5)
shape = SubResource("RectangleShape2D_27tpj")
disabled = true

[node name="BlueSprite2" type="Sprite2D" parent="."]
visible = false
position = Vector2(-10.75, -10)
scale = Vector2(0.152344, 0.15625)
texture = ExtResource("3_8262e")

[node name="SpriteCono1" type="Sprite2D" parent="."]
visible = false
position = Vector2(-10, -10)
scale = Vector2(0.0527344, 0.0585938)
texture = ExtResource("4_cwfkj")

[node name="CollisionCono1" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(-11, -11)
scale = Vector2(0.0527344, 0.0585938)
polygon = PackedVector2Array(46, -167, 47, -167, 47, -166, 48, -166, 48, -138, 76, -138, 76, -137, 77, -137, 77, -136, 78, -136, 78, -78, 106, -78, 106, -77, 107, -77, 107, -76, 108, -76, 108, 13, 136, 13, 136, 14, 137, 14, 137, 15, 138, 15, 138, 103, 166, 103, 166, 104, 167, 104, 167, 105, 168, 105, 168, 133, 196, 133, 196, 134, 197, 134, 197, 135, 198, 135, 198, 166, 197, 166, 197, 167, 196, 167, 196, 168, -196, 168, -196, 167, -197, 167, -197, 166, -198, 166, -198, 135, -197, 135, -197, 134, -196, 134, -196, 133, -168, 133, -168, 105, -167, 105, -167, 104, -166, 104, -166, 103, -138, 103, -138, 15, -137, 15, -137, 14, -136, 14, -136, 13, -108, 13, -108, -76, -107, -76, -107, -77, -106, -77, -106, -78, -78, -78, -78, -136, -77, -136, -77, -137, -76, -137, -76, -138, -48, -138, -48, -166, -47, -166, -47, -167, -46, -167, -46, -168, 46, -168)
disabled = true

[node name="SpriteTire1" type="Sprite2D" parent="."]
visible = false
position = Vector2(-10, -10)
scale = Vector2(0.0401596, 0.0401596)
texture = ExtResource("5_rrs6r")

[node name="CollisionTire1" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(-10, -10)
scale = Vector2(0.0401596, 0.0401596)
polygon = PackedVector2Array(47, -227, 75, -227, 75, -226, 76, -226, 76, -225, 77, -225, 77, -217, 105, -217, 105, -216, 106, -216, 106, -215, 107, -215, 107, -207, 125, -207, 125, -206, 126, -206, 126, -205, 127, -205, 127, -197, 145, -197, 145, -196, 146, -196, 146, -195, 147, -195, 147, -187, 165, -187, 165, -186, 166, -186, 166, -185, 167, -185, 167, -177, 175, -177, 175, -176, 176, -176, 176, -175, 177, -175, 177, -167, 185, -167, 185, -166, 186, -166, 186, -165, 187, -165, 187, -147, 195, -147, 195, -146, 196, -146, 196, -145, 197, -145, 197, -127, 205, -127, 205, -126, 206, -126, 206, -125, 207, -125, 207, -107, 215, -107, 215, -106, 216, -106, 216, -105, 217, -105, 217, -77, 225, -77, 225, -76, 226, -76, 226, -75, 227, -75, 227, -47, 235, -47, 235, 47, 227, 47, 227, 75, 226, 75, 226, 76, 225, 76, 225, 77, 217, 77, 217, 105, 216, 105, 216, 106, 215, 106, 215, 107, 207, 107, 207, 125, 206, 125, 206, 126, 205, 126, 205, 127, 197, 127, 197, 145, 196, 145, 196, 146, 195, 146, 195, 147, 187, 147, 187, 165, 186, 165, 186, 166, 185, 166, 185, 167, 177, 167, 177, 175, 176, 175, 176, 176, 175, 176, 175, 177, 167, 177, 167, 185, 166, 185, 166, 186, 165, 186, 165, 187, 147, 187, 147, 195, 146, 195, 146, 196, 145, 196, 145, 197, 127, 197, 127, 205, 126, 205, 126, 206, 125, 206, 125, 207, 107, 207, 107, 215, 106, 215, 106, 216, 105, 216, 105, 217, 77, 217, 77, 225, 76, 225, 76, 226, 75, 226, 75, 227, 47, 227, 47, 235, -47, 235, -47, 227, -75, 227, -75, 226, -76, 226, -76, 225, -77, 225, -77, 217, -105, 217, -105, 216, -106, 216, -106, 215, -107, 215, -107, 207, -125, 207, -125, 206, -126, 206, -126, 205, -127, 205, -127, 197, -145, 197, -145, 196, -146, 196, -146, 195, -147, 195, -147, 187, -165, 187, -165, 186, -166, 186, -166, 185, -167, 185, -167, 177, -175, 177, -175, 176, -176, 176, -176, 175, -177, 175, -177, 167, -185, 167, -185, 166, -186, 166, -186, 165, -187, 165, -187, 147, -195, 147, -195, 146, -196, 146, -196, 145, -197, 145, -197, 127, -205, 127, -205, 126, -206, 126, -206, 125, -207, 125, -207, 107, -215, 107, -215, 106, -216, 106, -216, 105, -217, 105, -217, 77, -225, 77, -225, 76, -226, 76, -226, 75, -227, 75, -227, 47, -235, 47, -235, -47, -227, -47, -227, -75, -226, -75, -226, -76, -225, -76, -225, -77, -217, -77, -217, -105, -216, -105, -216, -106, -215, -106, -215, -107, -207, -107, -207, -125, -206, -125, -206, -126, -205, -126, -205, -127, -197, -127, -197, -145, -196, -145, -196, -146, -195, -146, -195, -147, -187, -147, -187, -165, -186, -165, -186, -166, -185, -166, -185, -167, -177, -167, -177, -175, -176, -175, -176, -176, -175, -176, -175, -177, -167, -177, -167, -185, -166, -185, -166, -186, -165, -186, -165, -187, -147, -187, -147, -195, -146, -195, -146, -196, -145, -196, -145, -197, -127, -197, -127, -205, -126, -205, -126, -206, -125, -206, -125, -207, -107, -207, -107, -215, -106, -215, -106, -216, -105, -216, -105, -217, -77, -217, -77, -225, -76, -225, -76, -226, -75, -226, -75, -227, -47, -227, -47, -235, 47, -235)
disabled = true

[node name="SpriteCono2" type="Sprite2D" parent="."]
visible = false
position = Vector2(-11, -10.25)
scale = Vector2(0.0249688, 0.0209903)
texture = ExtResource("6_buee5")

[node name="CollisionCono2" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(-11, -10.25)
scale = Vector2(0.0249688, 0.0209903)
polygon = PackedVector2Array(19.5, -434.5, 49.5, -434.5, 49.5, -433.5, 50.5, -433.5, 50.5, -432.5, 51.5, -432.5, 51.5, -370.5, 81.5, -370.5, 81.5, -369.5, 82.5, -369.5, 82.5, -368.5, 83.5, -368.5, 83.5, -274.5, 113.5, -274.5, 113.5, -273.5, 114.5, -273.5, 114.5, -272.5, 115.5, -272.5, 115.5, -268.5, 116.5, -268.5, 116.5, -267.5, 117.5, -267.5, 117.5, -266.5, 118.5, -266.5, 118.5, -265.5, 117.5, -265.5, 117.5, -264.5, 116.5, -264.5, 116.5, -263.5, 115.5, -263.5, 115.5, -178.5, 145.5, -178.5, 145.5, -177.5, 146.5, -177.5, 146.5, -176.5, 147.5, -176.5, 147.5, -175.5, 148.5, -175.5, 148.5, -173.5, 147.5, -173.5, 147.5, -56.5, 148.5, -56.5, 148.5, -54.5, 147.5, -54.5, 147.5, -50.5, 148.5, -50.5, 148.5, -51.5, 150.5, -51.5, 150.5, -50.5, 151.5, -50.5, 151.5, -51.5, 158.5, -51.5, 158.5, -50.5, 159.5, -50.5, 159.5, -51.5, 164.5, -51.5, 164.5, -50.5, 167.5, -50.5, 167.5, -51.5, 171.5, -51.5, 171.5, -50.5, 173.5, -50.5, 173.5, -51.5, 175.5, -51.5, 175.5, -50.5, 177.5, -50.5, 177.5, -49.5, 178.5, -49.5, 178.5, -48.5, 179.5, -48.5, 179.5, 77.5, 209.5, 77.5, 209.5, 78.5, 210.5, 78.5, 210.5, 79.5, 211.5, 79.5, 211.5, 81.5, 212.5, 81.5, 212.5, 82.5, 211.5, 82.5, 211.5, 84.5, 212.5, 84.5, 212.5, 86.5, 211.5, 86.5, 211.5, 189.5, 212.5, 189.5, 212.5, 190.5, 211.5, 190.5, 211.5, 199.5, 212.5, 199.5, 212.5, 200.5, 213.5, 200.5, 213.5, 201.5, 214.5, 201.5, 214.5, 202.5, 215.5, 202.5, 215.5, 203.5, 214.5, 203.5, 214.5, 204.5, 235.5, 204.5, 235.5, 205.5, 236.5, 205.5, 236.5, 204.5, 240.5, 204.5, 240.5, 205.5, 241.5, 205.5, 241.5, 206.5, 242.5, 206.5, 242.5, 207.5, 243.5, 207.5, 243.5, 208.5, 245.5, 208.5, 245.5, 209.5, 246.5, 209.5, 246.5, 210.5, 247.5, 210.5, 247.5, 211.5, 246.5, 211.5, 246.5, 212.5, 245.5, 212.5, 245.5, 213.5, 244.5, 213.5, 244.5, 212.5, 243.5, 212.5, 243.5, 329.5, 245.5, 329.5, 245.5, 330.5, 246.5, 330.5, 246.5, 331.5, 247.5, 331.5, 247.5, 332.5, 369.5, 332.5, 369.5, 333.5, 370.5, 333.5, 370.5, 334.5, 371.5, 334.5, 371.5, 364.5, 372.5, 364.5, 372.5, 363.5, 373.5, 363.5, 373.5, 362.5, 374.5, 362.5, 374.5, 361.5, 375.5, 361.5, 375.5, 362.5, 376.5, 362.5, 376.5, 363.5, 377.5, 363.5, 377.5, 364.5, 400.5, 364.5, 400.5, 434.5, 371.5, 434.5, 371.5, 463.5, 370.5, 463.5, 370.5, 464.5, -369.5, 464.5, -369.5, 463.5, -370.5, 463.5, -370.5, 434.5, -400.5, 434.5, -400.5, 364.5, -370.5, 364.5, -370.5, 335.5, -369.5, 335.5, -369.5, 334.5, -368.5, 334.5, -368.5, 333.5, -367.5, 333.5, -367.5, 332.5, -242.5, 332.5, -242.5, 206.5, -241.5, 206.5, -241.5, 205.5, -240.5, 205.5, -240.5, 204.5, -210.5, 204.5, -210.5, 79.5, -209.5, 79.5, -209.5, 78.5, -208.5, 78.5, -208.5, 77.5, -178.5, 77.5, -178.5, -47.5, -177.5, -47.5, -177.5, -48.5, -176.5, -48.5, -176.5, -49.5, -175.5, -49.5, -175.5, -50.5, -146.5, -50.5, -146.5, -175.5, -145.5, -175.5, -145.5, -176.5, -144.5, -176.5, -144.5, -177.5, -143.5, -177.5, -143.5, -178.5, -113.5, -178.5, -113.5, -180.5, -114.5, -180.5, -114.5, -266.5, -113.5, -266.5, -113.5, -267.5, -114.5, -267.5, -114.5, -271.5, -113.5, -271.5, -113.5, -272.5, -112.5, -272.5, -112.5, -273.5, -111.5, -273.5, -111.5, -274.5, -81.5, -274.5, -81.5, -275.5, -82.5, -275.5, -82.5, -362.5, -81.5, -362.5, -81.5, -365.5, -82.5, -365.5, -82.5, -367.5, -81.5, -367.5, -81.5, -368.5, -80.5, -368.5, -80.5, -369.5, -79.5, -369.5, -79.5, -370.5, -50.5, -370.5, -50.5, -431.5, -49.5, -431.5, -49.5, -432.5, -48.5, -432.5, -48.5, -433.5, -47.5, -433.5, -47.5, -434.5, -18.5, -434.5, -18.5, -464.5, 19.5, -464.5)
disabled = true

[node name="SpriteTire2" type="Sprite2D" parent="."]
visible = false
position = Vector2(-10, -9.5)
scale = Vector2(0.0833333, 0.0862069)
texture = ExtResource("7_3ou44")

[node name="CollisionTire2" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(-10, -9.5)
scale = Vector2(0.0833333, 0.0862069)
polygon = PackedVector2Array(40, -116, 41, -116, 41, -115, 42, -115, 42, -107, 60, -107, 60, -106, 61, -106, 61, -105, 62, -105, 62, -97, 70, -97, 70, -96, 71, -96, 71, -95, 72, -95, 72, -87, 80, -87, 80, -86, 81, -86, 81, -85, 82, -85, 82, -77, 90, -77, 90, -76, 91, -76, 91, -75, 92, -75, 92, -67, 100, -67, 100, -66, 101, -66, 101, -65, 102, -65, 102, -47, 110, -47, 110, -46, 111, -46, 111, -45, 112, -45, 112, 35, 111, 35, 111, 36, 110, 36, 110, 37, 102, 37, 102, 55, 101, 55, 101, 56, 100, 56, 100, 57, 92, 57, 92, 65, 91, 65, 91, 66, 90, 66, 90, 67, 82, 67, 82, 75, 81, 75, 81, 76, 80, 76, 80, 77, 72, 77, 72, 85, 71, 85, 71, 86, 70, 86, 70, 87, 62, 87, 62, 95, 61, 95, 61, 96, 60, 96, 60, 97, 42, 97, 42, 105, 41, 105, 41, 106, 40, 106, 40, 107, -40, 107, -40, 106, -41, 106, -41, 105, -42, 105, -42, 97, -60, 97, -60, 96, -61, 96, -61, 95, -62, 95, -62, 87, -70, 87, -70, 86, -71, 86, -71, 85, -72, 85, -72, 77, -80, 77, -80, 76, -81, 76, -81, 75, -82, 75, -82, 67, -90, 67, -90, 66, -91, 66, -91, 65, -92, 65, -92, 57, -100, 57, -100, 56, -101, 56, -101, 55, -102, 55, -102, 37, -110, 37, -110, 36, -111, 36, -111, 35, -112, 35, -112, -45, -111, -45, -111, -46, -110, -46, -110, -47, -102, -47, -102, -65, -101, -65, -101, -66, -100, -66, -100, -67, -92, -67, -92, -75, -91, -75, -91, -76, -90, -76, -90, -77, -82, -77, -82, -85, -81, -85, -81, -86, -80, -86, -80, -87, -72, -87, -72, -95, -71, -95, -71, -96, -70, -96, -70, -97, -62, -97, -62, -105, -61, -105, -61, -106, -60, -106, -60, -107, -42, -107, -42, -115, -41, -115, -41, -116, -40, -116, -40, -117, 40, -117)
disabled = true

[node name="SpriteRock" type="Sprite2D" parent="."]
visible = false
position = Vector2(-8.5, -7.5)
scale = Vector2(0.0570652, 0.0590278)
texture = ExtResource("8_m32nm")

[node name="CollisionRock" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(-8.5, -7.5)
scale = Vector2(0.0570652, 0.0590278)
polygon = PackedVector2Array(-16, -69, -15, -69, -15, -68, -14, -68, -14, -66, -8, -66, -8, -65, -7, -65, -7, -64, -6, -64, -6, -62, 4, -62, 4, -61, 5, -61, 5, -60, 6, -60, 6, -58, 12, -58, 12, -57, 13, -57, 13, -56, 14, -56, 14, -54, 24, -54, 24, -53, 25, -53, 25, -52, 26, -52, 26, -50, 32, -50, 32, -49, 33, -49, 33, -48, 34, -48, 34, -46, 40, -46, 40, -45, 41, -45, 41, -44, 42, -44, 42, -42, 44, -42, 44, -41, 45, -41, 45, -40, 46, -40, 46, -34, 48, -34, 48, -33, 49, -33, 49, -32, 50, -32, 50, -30, 52, -30, 52, -29, 53, -29, 53, -28, 54, -28, 54, -22, 56, -22, 56, -21, 57, -21, 57, -20, 58, -20, 58, -18, 60, -18, 60, -17, 61, -17, 61, -16, 62, -16, 62, -14, 64, -14, 64, -13, 65, -13, 65, -12, 66, -12, 66, -10, 68, -10, 68, -9, 69, -9, 69, -8, 70, -8, 70, -2, 72, -2, 72, -1, 73, -1, 73, 0, 74, 0, 74, 2, 80, 2, 80, 3, 81, 3, 81, 4, 82, 4, 82, 6, 88, 6, 88, 7, 89, 7, 89, 8, 90, 8, 90, 10, 96, 10, 96, 11, 97, 11, 97, 12, 98, 12, 98, 14, 104, 14, 104, 15, 105, 15, 105, 16, 106, 16, 106, 18, 112, 18, 112, 19, 113, 19, 113, 20, 114, 20, 114, 22, 120, 22, 120, 23, 121, 23, 121, 24, 122, 24, 122, 26, 124, 26, 124, 27, 125, 27, 125, 28, 126, 28, 126, 34, 128, 34, 128, 35, 129, 35, 129, 36, 130, 36, 130, 42, 132, 42, 132, 43, 133, 43, 133, 44, 134, 44, 134, 50, 136, 50, 136, 51, 137, 51, 137, 52, 138, 52, 138, 54, 140, 54, 140, 55, 141, 55, 141, 56, 142, 56, 142, 62, 144, 62, 144, 63, 145, 63, 145, 64, 146, 64, 146, 66, 148, 66, 148, 67, 149, 67, 149, 68, 150, 68, 150, 74, 152, 74, 152, 75, 153, 75, 153, 76, 154, 76, 154, 82, 156, 82, 156, 83, 157, 83, 157, 84, 158, 84, 158, 92, 157, 92, 157, 93, 156, 93, 156, 94, 150, 94, 150, 96, 149, 96, 149, 97, 148, 97, 148, 98, 138, 98, 138, 100, 137, 100, 137, 101, 136, 101, 136, 102, 126, 102, 126, 104, 125, 104, 125, 105, 124, 105, 124, 106, 114, 106, 114, 108, 113, 108, 113, 109, 112, 109, 112, 110, 102, 110, 102, 112, 101, 112, 101, 113, 100, 113, 100, 114, 90, 114, 90, 116, 89, 116, 89, 117, 88, 117, 88, 118, 78, 118, 78, 120, 77, 120, 77, 121, 76, 121, 76, 122, 34, 122, 34, 124, 33, 124, 33, 125, 32, 125, 32, 126, 26, 126, 26, 128, 25, 128, 25, 129, 24, 129, 24, 130, -12, 130, -12, 129, -13, 129, -13, 128, -14, 128, -14, 126, -18, 126, -18, 128, -19, 128, -19, 129, -20, 129, -20, 130, -116, 130, -116, 129, -117, 129, -117, 128, -118, 128, -118, 126, -136, 126, -136, 125, -137, 125, -137, 124, -138, 124, -138, 122, -148, 122, -148, 121, -149, 121, -149, 120, -150, 120, -150, 52, -149, 52, -149, 51, -148, 51, -148, 50, -146, 50, -146, 44, -145, 44, -145, 43, -144, 43, -144, 42, -142, 42, -142, 32, -141, 32, -141, 31, -140, 31, -140, 30, -138, 30, -138, 28, -137, 28, -137, 27, -136, 27, -136, 26, -134, 26, -134, 24, -133, 24, -133, 23, -132, 23, -132, 22, -130, 22, -130, 20, -129, 20, -129, 19, -128, 19, -128, 18, -126, 18, -126, 16, -125, 16, -125, 15, -124, 15, -124, 14, -122, 14, -122, 12, -121, 12, -121, 11, -120, 11, -120, 10, -118, 10, -118, 8, -117, 8, -117, 7, -116, 7, -116, 6, -110, 6, -110, 4, -109, 4, -109, 3, -108, 3, -108, 2, -102, 2, -102, 0, -101, 0, -101, -1, -100, -1, -100, -2, -90, -2, -90, -16, -89, -16, -89, -17, -88, -17, -88, -18, -86, -18, -86, -32, -85, -32, -85, -33, -84, -33, -84, -34, -82, -34, -82, -44, -81, -44, -81, -45, -80, -45, -80, -46, -78, -46, -78, -48, -77, -48, -77, -49, -76, -49, -76, -50, -74, -50, -74, -52, -73, -52, -73, -53, -72, -53, -72, -54, -66, -54, -66, -56, -65, -56, -65, -57, -64, -57, -64, -58, -54, -58, -54, -60, -53, -60, -53, -61, -52, -61, -52, -62, -42, -62, -42, -64, -41, -64, -41, -65, -40, -65, -40, -66, -26, -66, -26, -68, -25, -68, -25, -69, -24, -69, -24, -70, -16, -70)
disabled = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-10.5, -10)
scale = Vector2(1.05, 1)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
